--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,24 @@ section {
   margin-bottom: 250px;
 }
 
+.img100 {
+  width: 100%;
+}
+
+@media (max-width: 900px) {
+  section {
+    margin-bottom: 175px;
+  }
+  .global-title {
+    font-size: 40px;
+  }
+}
+
 .header {
-  background: url("../img/header/header-top.jpg") no-repeat top center;
-  height: 1333px;
-  background-size: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .header-menu {
@@ -73,13 +87,16 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 50px;
+  margin-top: 25px;
 }
 
-.header-menu__logo {
+.header-menu-logo {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 550px;
           flex: 0 1 550px;
+}
+
+.header-menu__logo {
   color: #ff6a6d;
   font-size: 32px;
   font-family: "Fivo Sans - Heavy";
@@ -105,7 +122,9 @@ section {
       -ms-flex-pack: justify;
           justify-content: space-between;
   list-style: none;
-  width: 400px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 400px;
+          flex: 0 1 400px;
 }
 
 .header-nav-ul__item a {
@@ -203,6 +222,141 @@ section {
   }
 }
 
+@media (max-width: 900px) {
+  .header-nav {
+    margin-right: 50px;
+  }
+}
+
+@media (max-width: 690px) {
+  .header-nav {
+    width: 100%;
+    margin-right: 0;
+  }
+  .header-nav-ul {
+    width: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 0px;
+  }
+}
+
+@media (max-width: 500px) {
+  .header-menu-logo {
+    display: none;
+  }
+  .header-menu {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.main {
+  background: url("../img/header/header-top.jpg") no-repeat top center;
+  height: 1333px;
+  background-size: 100%;
+  margin-bottom: 0 !important;
+}
+
+.main-content {
+  padding-top: 125px;
+  margin-left: 100px;
+  max-width: 550px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-content__text {
+  max-width: 450px;
+}
+
+.main-content-toolbar {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.main-content-toolbar button {
+  width: 240px;
+  height: 80px;
+  border-radius: 40px;
+}
+
+.main-content-toolbar__service {
+  background-color: #ff6a6d;
+  -webkit-box-shadow: -14px 17px 24px 1px rgba(226, 88, 91, 0.45), 0 0 7px rgba(255, 255, 255, 0.35);
+          box-shadow: -14px 17px 24px 1px rgba(226, 88, 91, 0.45), 0 0 7px rgba(255, 255, 255, 0.35);
+}
+
+.main-content-toolbar__signUp {
+  background-color: transparent;
+  border: 2px solid #ff6a6d;
+  color: #ff6a6d;
+}
+
+@media (min-width: 1224px) and (max-width: 1600px) {
+  .main-content {
+    margin-left: 175px;
+  }
+}
+
+@media (max-width: 1600px) {
+  .main {
+    background-size: auto;
+  }
+}
+
+@media (max-width: 900px) {
+  .main {
+    height: 1000px;
+  }
+  .main-content {
+    margin-left: 0;
+  }
+  .main-content-toolbar {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main-content-toolbar :first-child {
+    margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 400px) {
+  .main {
+    height: 1150px;
+  }
+}
+
+@media (max-width: 320px) {
+  .main {
+    height: 1300px;
+  }
+}
+
 .choose-name {
   margin-bottom: 75px;
   display: -webkit-box;
@@ -222,7 +376,7 @@ section {
 }
 
 .choose-name__description {
-  width: 650px;
+  max-width: 650px;
   text-align: center;
 }
 
@@ -270,6 +424,19 @@ section {
 .choose-content-card__text {
   line-height: 27px;
   text-align: center;
+}
+
+@media (max-width: 900px) {
+  .choose-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .choose-content__card {
+    width: auto;
+    margin-bottom: 25px;
+  }
 }
 
 .whats-on-wrapper {
@@ -365,6 +532,27 @@ section {
   display: block;
 }
 
+@media (max-width: 1600px) {
+  .whats-on-background__right {
+    display: none;
+  }
+  .whats-on-background__left {
+    display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  .whats-on-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .whats-on-wrapper-right-list {
+    padding-left: 0;
+  }
+}
+
 .power-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -410,6 +598,22 @@ section {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
+}
+
+@media (max-width: 900px) {
+  .power-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .power-wrapper-left__text {
+    max-width: 100%;
+    margin-left: 0;
+  }
+  .power-wrapper-left__title {
+    text-align: center;
+  }
 }
 
 .ways-wrapper {
@@ -486,6 +690,30 @@ section {
   height: 335px;
   position: relative;
   bottom: 110px;
+}
+
+@media (max-width: 1600px) {
+  .ways-background__right {
+    display: none;
+  }
+  .ways-background__left {
+    display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  .ways-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .ways-wrapper-right__text {
+    margin-left: 0;
+  }
+  .ways-wrapper-right__title {
+    text-align: center;
+  }
 }
 
 .footer {
@@ -583,7 +811,7 @@ section {
 .footer-price-card__ul {
   margin-top: 50px;
   margin-left: 75px;
-  width: 363px;
+  max-width: 363px;
 }
 
 .footer-price-card__coast {
@@ -650,18 +878,19 @@ section {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-top: 100px;
   margin-left: 130px;
   margin-right: 130px;
 }
 
-.footer-link-row__column {
-  height: 260px;
-}
-
 .footer-link-row-column {
   color: #000000;
   max-width: 25%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 25%;
+          flex: 0 1 25%;
 }
 
 .footer-link-row-column__title {
@@ -690,7 +919,7 @@ section {
 }
 
 .footer-copyright {
-  padding: 100px 0 30px 0;
+  padding-bottom: 30px;
   text-align: center;
   font-size: 18px;
 }
@@ -734,5 +963,114 @@ section {
 .card_shadow_right {
   -webkit-box-shadow: 7px 5px 15px 0px rgba(0, 0, 0, 0.24);
           box-shadow: 7px 5px 15px 0px rgba(0, 0, 0, 0.24);
+}
+
+@media (max-width: 1366px) {
+  .footer-price__card {
+    width: 375px;
+  }
+  .footer-price-card__ul {
+    margin-left: 50px;
+  }
+}
+
+@media (max-width: 1099px) {
+  .footer-price {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-price__card {
+    margin-bottom: 10px;
+  }
+  .footer-price__card_best {
+    margin-bottom: 10px;
+  }
+  .footer {
+    border-radius: 10% 10% 0 0;
+  }
+}
+
+@media (max-width: 900px) {
+  .footer-link-row-column {
+    max-width: 50%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer-link-row-column__title {
+    margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 690px) {
+  .footer-link-row-column {
+    max-width: 100%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 30px;
+  }
+  .footer-link-row-column__title {
+    margin-bottom: 10px;
+  }
+  .footer-price__card_best {
+    width: 400px;
+  }
+  .footer-price__card {
+    width: 325px;
+  }
+  .footer {
+    border-radius: 0;
+  }
+  .footer-link-row {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 420px) {
+  .footer-price__card_best {
+    width: 250px;
+    height: 590px;
+  }
+  .footer-price__card {
+    width: 250px;
+    height: 490px;
+  }
+  .footer-price-card__ul {
+    margin-left: 10px;
+  }
+  .footer-price-card__coast {
+    font-size: 100px;
+    margin-top: 40px;
+  }
+  .footer-price-card__subtitle {
+    margin-top: 25px;
+  }
+  .footer-price {
+    padding-bottom: 100px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
