--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -40,3 +40,18 @@ button {
 section {
     margin-bottom: 250px;
 }
+
+.img100 {
+    width: 100%;
+} 
+
+@media (max-width: 900px) {
+    section {       
+        margin-bottom: 175px;
+    }
+
+    .global-title{
+        font-size: 40px;
+    }
+
+}
