--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,9 @@
 @import 'fonts';
 
 @import 'global';
+
 @import 'blocks/header';
+@import 'blocks/main';
 @import 'blocks/choose';
 @import 'blocks/whats-on';
 @import 'blocks/power';
