--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -65,7 +65,7 @@
             &__ul {
                 margin-top: 50px;
                 margin-left: 75px;
-                width: 363px;
+                max-width: 363px;
 
             }
 
@@ -119,16 +119,15 @@
             display: flex;
             justify-content: space-between;
             flex-direction: row;
+            flex-wrap: wrap;
             padding-top: 100px;
             margin-left: 130px;
             margin-right: 130px;          
-            &__column {
-                height: 260px;
-            }
 
             &-column {
                 color: #000000;
                 max-width: 25%;
+                flex: 0 1 25%;
                 &__title {
                     font-family: "Fivo Sans - Heavy";
                     font-size: 18px;
@@ -159,7 +158,7 @@
     }
 
     &-copyright {
-        padding: 100px 0 30px 0;
+        padding-bottom: 30px;
         text-align: center;
         font-size: 18px;
     }
@@ -200,5 +199,109 @@
 
     &_right {
         box-shadow: 7px 5px 15px 0px rgba(0,0,0,0.24);
+    }
+}
+
+
+@media (max-width: 1366px) {
+    .footer-price__card {
+        width: 375px;
+    }
+
+    .footer-price-card__ul {
+        margin-left: 50px;
+    }
+}
+
+@media (max-width: 1099px) {
+    .footer-price {
+        flex-direction: column;
+
+        &__card {
+            margin-bottom: 10px;
+
+            &_best {
+                margin-bottom: 10px;
+            }
+        }
+    }
+
+    .footer {
+        border-radius: 10% 10% 0 0 ;
+    }
+}
+
+@media (max-width: 900px) {
+    .footer-link-row-column {
+        max-width: 50%;
+        flex: 0 1 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-link-row-column__title {
+        margin-bottom: 25px;
+    }
+}
+
+@media (max-width: 690px) {
+    .footer-link-row-column {
+        max-width: 100%;
+        flex: 0 1 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+
+    .footer-link-row-column__title {
+        margin-bottom: 10px;
+    }
+
+    .footer-price__card_best {
+        width: 400px;
+    }
+
+    .footer-price__card {
+        width: 325px;
+    }
+
+    .footer {
+        border-radius:0 ;
+    }
+
+    .footer-link-row{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+@media (max-width: 420px) {
+
+    .footer-price__card_best {
+        width: 250px;
+        height: 590px;
+    }
+
+    .footer-price__card {
+        width: 250px;
+        height: 490px;
+    }
+
+    .footer-price-card__ul {
+        margin-left: 10px;
+    }
+
+    .footer-price-card__coast {
+        font-size: 100px;
+        margin-top: 40px;
+    }
+
+    .footer-price-card__subtitle {
+        margin-top: 25px;
+    }
+
+    .footer-price {
+        padding-bottom: 100px;
     }
 }
