--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1,16 +1,21 @@
 .header {
-    background: url('../img/header/header-top.jpg') no-repeat top center;
-    height: 1333px;
-    background-size: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 
     &-menu {
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding-top: 50px;
+        margin-top: 25px;
+
+        &-logo {
+            flex: 0 1 550px;
+        }
 
         &__logo {
-            flex: 0 1 550px;
             color: $red;
             font-size: 32px;
             font-family: "Fivo Sans - Heavy";
@@ -29,7 +34,7 @@
             flex-direction: row;
             justify-content: space-between;
             list-style: none;
-            width: 400px;
+            flex: 0 1 400px;
     
             &__item {
                 a {
@@ -122,6 +127,31 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 900px) {
+    .header-nav {
+        margin-right: 50px;
+    }
+}
 
+@media (max-width: 690px) {
+    .header-nav {
+        width: 100%;
+        margin-right: 0;
+        &-ul {
+            width: auto;
+            flex-direction: column;
+            align-items: center;
+            padding-left: 0px;
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .header-menu-logo {
+        display: none;
+    }
+
+    .header-menu {
+        justify-content: space-between;
+    }
 }
